refactor: complete switch from mongodb to in-memory database.